# cuda-img-processing

./: .gitignore  CMakeLists.txt  README.md  build.sh  install_opencv.sh
src/: CMakeLists.txt  img_proc.cu  img_proc.cuh  main.cpp
